# routes/api.php
@@ -12,6 +12,7 @@ use App\Http\Controllers\SaleController;
 // Auth Routes
 Route::post('register', [AuthController::class, 'register'])->name('api.register');
 Route::post('login', [AuthController::class, 'login'])->name('api.login');
+Route::post('forgot-password', [AuthController::class, 'forget'])->name('api.forgot-password');
 Route::get('verify-email/{token}', [AuthController::class, 'verifyEmail'])->name('api.verify-email');
 
 // Protected Routes
